@@ -25,12 +25,11 @@
         <java.version>17</java.version>
         <scala.main.version>2.12</scala.main.version>
         <scala.version>2.12.16</scala.version>
-<!--        <scala.main.version>2.11</scala.main.version>-->
-<!--        <scala.version>2.11.12</scala.version>-->
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <scala-compiler-plugin.version>4.6.1</scala-compiler-plugin.version>
 
-        <lombok.version>1.18.20</lombok.version>
-        <jackson.version>2.9.0</jackson.version>
+        <lombok.version>1.18.30</lombok.version>
+        <jackson.version>2.13.5</jackson.version>
         <compress.version>1.21</compress.version>
         <caffeine.version>2.9.0</caffeine.version>
         <druid.version>1.2.5</druid.version>
@@ -42,12 +41,12 @@
         <curator.version>5.3.0</curator.version>
         <hbase.version>2.4.15</hbase.version>
         <kafka.version>2.8.1</kafka.version>
-        <strom.version>2.4.0</strom.version>
-        <spark.version>2.3.3</spark.version>
+        <strom.version>2.5.0</strom.version>
+        <spark.version>3.3.2</spark.version>
         <flink.version>1.13.6</flink.version>
         <hudi.version>0.12.0</hudi.version>
 
-        <jdbc.version>5.1.47</jdbc.version>
+        <jdbc.version>8.0.33</jdbc.version>
         <mysql.cdc.version>1.3.0</mysql.cdc.version>
         <flink.jdbc.version>1.6.1</flink.jdbc.version>
         <flink.hdfs.version>1.10.1</flink.hdfs.version>
@@ -112,8 +111,22 @@
                         <arg>java.base/java.lang=ALL-UNNAMED</arg>
                         <arg>--add-opens</arg>
                         <arg>java.base/java.util=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg>
+                        <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
+                        <arg>java.base/java.nio=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
+                        <arg>java.base/java.lang.invoke=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
